--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "bootstrap": "^4.5.3",
+    "http-client": "^4.3.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "ngx-toastr": "^13.1.0",
